fixed gap between options and results table

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     margin: 10px;
 }
 
+body {
+    overflow-y: scroll;
+}
+
 button {
     width: 100%;
 }
@@ -11,8 +15,12 @@ button {
     justify-content: space-between;
 }
 
+#results-table {
+    transition: transform 0.2s;
+}
+
 /* Style the button that is used to open and close the collapsible content */
-.collapsible {
+#collapsible {
     cursor: pointer;
     padding: 18px;
     width: 100%;
@@ -25,7 +33,7 @@ button {
 }
 
 /* Style the collapsible content. Note: hidden by default */
-.content {
+#content {
     padding: 0 18px;
     max-height: 0;
     overflow: hidden;
